--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "browser-sync": "^2.18.8",
+    "codemirror": "^5.37.0",
     "css-loader": "^0.27.3",
     "echarts": "^3.6.1",
     "gulp": "^3.9.1",
